[tool.poetry]
name = "projeto1"
version = "0.1.0"
description = ""
authors = ["Cleiton"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
converter = "^1.0.0"
asyncio = "^3.4.3"
fastapi = "^0.111.0"
routers = "^0.10.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
